--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
     <div class="container-xl">
       <div class="cards mt-5 gap-4"></div>
+      <div class="d-flex my-5 justify-content-between">
+        <button class="btn btn-outline-success prev" disabled>Prev</button>
+        <button class="btn btn-outline-success next">Next</button>
+      </div>
     </div>
 
     <script
