--- a/movie.html
+++ b/movie.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>P238 Cinema</title>
 
     <script src="./js/movie.js" defer></script>
   </head>
